--- a/form.ui
+++ b/form.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>254</width>
-    <height>288</height>
+    <width>243</width>
+    <height>275</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>243</width>
+    <height>275</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Widget</string>
