--- a/admin.ui
+++ b/admin.ui
@@ -109,6 +109,11 @@
          <height>35</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Поменять пароль на admin</string>
        </property>
@@ -122,6 +127,11 @@
          <height>35</height>
         </size>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Поменять пароль на user</string>
        </property>
@@ -134,6 +144,11 @@
          <width>0</width>
          <height>35</height>
         </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
        </property>
        <property name="text">
         <string>Поменять пароль для сервиса</string>
